[package]
name = "gandalf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
name = "gandalf"
path = "src/lib.rs"

[[bin]]
name = "greyhat"
path = "src/main.rs"

[dependencies]
base64 = "0.13.0"
clap = {version = "3.2.19", features = ["derive"]}
getrandom = "0.2.7"
rand = "0.8.5"
